fix: allow any localhost port in CORS config
Co-Authored-By: Ria Modak <riamodak@gmail.com>